# api/docs/swagger.json
@@ -37,8 +37,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "offset",
-                        "name": "search",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "phone_number",
+                        "name": "phone_number",
                         "in": "query"
                     }
                 ],
@@ -455,12 +461,6 @@
                         "description": "offset",
                         "name": "offset",
                         "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "offset",
-                        "name": "search",
-                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -875,12 +875,6 @@
                         "type": "number",
                         "description": "offset",
                         "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "offset",
-                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -1300,8 +1294,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "offset",
-                        "name": "search",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "branch_id",
+                        "name": "branch_id",
                         "in": "query"
                     }
                 ],
@@ -1721,8 +1721,14 @@
                     },
                     {
                         "type": "string",
-                        "description": "offset",
-                        "name": "search",
+                        "description": "name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "branch_id",
+                        "name": "branch_id",
                         "in": "query"
                     }
                 ],
@@ -2113,6 +2119,164 @@
                 }
             }
         },
+        "/report_client": {
+            "get": {
+                "description": "ClinetOverallReport",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OverallReport"
+                ],
+                "summary": "ClinetOverallReport",
+                "operationId": "ClinetOverallReport",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "date_from",
+                        "name": "date_from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "date_to",
+                        "name": "date_to",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "ClinetOverallReportBody",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Client"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Argument",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/report_sale": {
+            "get": {
+                "description": "SaleOverallReport",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OverallReport"
+                ],
+                "summary": "SaleOverallReport",
+                "operationId": "SaleOverallReport",
+                "responses": {
+                    "201": {
+                        "description": "SaleOverallReportBody",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/models.Client"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid Argument",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/handler.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/sale": {
             "get": {
                 "description": "GetList Sale",
@@ -2138,12 +2302,6 @@
                         "type": "number",
                         "description": "offset",
                         "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "offset",
-                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -2559,12 +2717,6 @@
                         "type": "number",
                         "description": "offset",
                         "name": "offset",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "offset",
-                        "name": "search",
                         "in": "query"
                     }
                 ],
@@ -2984,8 +3136,26 @@
                     },
                     {
                         "type": "string",
-                        "description": "offset",
-                        "name": "search",
+                        "description": "first_name",
+                        "name": "first_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "last_name",
+                        "name": "last_name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "branch_id",
+                        "name": "branch_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "phone_number",
+                        "name": "phone_number",
                         "in": "query"
                     }
                 ],
@@ -3562,10 +3732,10 @@
                 "arrival_price": {
                     "type": "number"
                 },
-                "name": {
+                "branch_id": {
                     "type": "string"
                 },
-                "product_id": {
+                "name": {
                     "type": "string"
                 },
                 "quantity": {
@@ -3789,6 +3959,9 @@
                 "arrival_price": {
                     "type": "number"
                 },
+                "branch_id": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -3796,9 +3969,6 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string"
-                },
-                "product_id": {
                     "type": "string"
                 },
                 "quantity": {
@@ -3967,10 +4137,10 @@
                 "arrival_price": {
                     "type": "number"
                 },
-                "name": {
+                "branch_id": {
                     "type": "string"
                 },
-                "product_id": {
+                "name": {
                     "type": "string"
                 },
                 "quantity": {
